--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -1,31 +1,42 @@
 :host {
-  height: 100%;
   display: flex;
+  width: var(--login-width);
   justify-content: center;
   align-items: center;
   margin: auto;
 }
 
 mat-card {
-  margin-bottom: 10em;
-  text-align: center;
-}
-
-h3 {
-  margin: 1.5em 0;
-  font-size: large;
-  font-weight: bold;
-}
-
-mat-form-field {
+  display: block;
   width: 100%;
-  margin: 1em 0;
+  margin-top: 5em;
+  padding: 1em;
+  text-align: center;
+
+  h3 {
+    margin: 1em 0 2em;
+    font-size: 1.5rem;
+    line-height: 140%;
+    letter-spacing: 0.25px;
+    text-transform: uppercase;
+  }
+
+  form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+
+    #buttons {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 100%;
+    }
+
+  }
 }
 
-#login-button {
-  margin-bottom: 1.5em;
-}
 
-.server-error {
-  margin: 8px 0;
-}
+
+
