--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -1,5 +1,82 @@
 :host {
   display: block;
-  margin: 10% auto 0;
   width: var(--limit-width);
+  margin: 10% auto 0;
 }
+
+form {
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+  gap: 1em;
+  margin-top: 1em;
+
+  #inputs {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+
+    #fields {
+      display: flex;
+      flex-direction: row;
+      flex-grow: 1;
+      gap: 3em;
+    }
+
+    #radios {
+      display: flex;
+      flex-direction: row;
+      flex-grow: 1;
+      gap: 1em;
+      align-items: center;
+
+      label {
+        font-weight: bold;
+      }
+
+      mat-radio-group {
+        margin-right: 3em;
+      }
+    }
+  }
+
+  button {
+    height: 56px;
+    width: 10%;
+  }
+}
+
+
+@media only screen and (max-width: 600px) {
+  form {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    gap: 1em;
+    margin-top: 1em;
+
+    #inputs {
+      display: flex;
+      flex-direction: column;
+      flex-grow: 1;
+
+      #fields {
+        flex-direction: column;
+        gap: 1em;
+      }
+
+      #radios {
+        margin-top: 1em;
+        flex-direction: column;
+        gap: 1em;
+        align-items: center;
+      }
+    }
+
+    button {
+      width: 100%;
+      margin-top: 1em;
+    }
+  }
+}
+
