--- a/src/app/pages/journey-page/journey-page.component.html
+++ b/src/app/pages/journey-page/journey-page.component.html
@@ -1,3 +1,7 @@
 @for (journey of journeyList; track journey) {
   <app-journey-item [journey]="journey" (purchase)="purchase($event)"></app-journey-item>
 }
+
+<ng-container *ngIf="journeyList?.length == 0">
+  <app-journey-item [journey]="null" (purchase)="purchase($event)"></app-journey-item>
+</ng-container>
