--- a/src/app/pages/journey-page/journey-page.component.scss
+++ b/src/app/pages/journey-page/journey-page.component.scss
@@ -1,7 +1,8 @@
 :host {
   display: flex;
-  gap: 20px;
+  gap: 2em;
   flex-direction: column;
   width: var(--limit-width);
   margin: auto;
+  padding: 2em 0;
 }
