--- a/src/app/pages/register-page/register-page.component.scss
+++ b/src/app/pages/register-page/register-page.component.scss
@@ -10,8 +10,12 @@ mat-card {
   display: block;
   width: 100%;
   margin-top: 5em;
-  padding: 1em;
   text-align: center;
+
+  mat-card-content {
+    padding-bottom: 2em;
+  }
+
 
   h3 {
     margin: 1em 0 2em;
