--- a/src/app/pages/tickets-page/tickets-page.component.html
+++ b/src/app/pages/tickets-page/tickets-page.component.html
@@ -17,7 +17,7 @@
     <td mat-cell *matCellDef="let element"> {{ element.departTime.toMillis() | date:'MM.dd. HH:mm' }}</td>
   </ng-container>
 
-  <ng-container matColumnDef="arrivalTIme">
+  <ng-container matColumnDef="arrivalTime">
     <th mat-header-cell *matHeaderCellDef> Érkezés</th>
     <td mat-cell
         *matCellDef="let element"> {{ element.arriveTime.toMillis() | date:"MM.dd. HH:mm" }}
