--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -43,7 +43,7 @@
           </mat-form-field>
 
           <mat-form-field appearance="outline">
-            <mat-label>Mikor?</mat-label>
+            <mat-label>Dátum</mat-label>
             <input
               matInput
               [matDatepicker]="datePicker"
@@ -54,7 +54,7 @@
           </mat-form-field>
 
           <mat-form-field appearance="outline">
-            <mat-label>Honnan</mat-label>
+            <mat-label>Idő</mat-label>
             <input matInput
                    formControlName="time"
                    [format]="24"
